第四次作业

--- a/web/view/css/style.css
+++ b/web/view/css/style.css
@@ -1,3 +1,18 @@
 .course-item{
     height: 50px;
 }
+.login-body{
+    max-width: 400px;
+    padding: 45px 35px 45px;
+    margin: 30px auto;
+}
+.studentid,.password{
+    height: 45px;
+}
+input{
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    margin-bottom: 20px;
+}
